--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -9,7 +9,7 @@
             </label>
           </div>
           <div class="form-check">
-            &nbsp;&nbsp;<input class="form-check-input" type="radio" name="tip" id="exampleRadios2" value="volonter" ngModel>
+            &nbsp;&nbsp;<input class="form-check-input" type="radio" name="tip" id="exampleRadios2" value="Volonter" ngModel>
             <label class="form-check-label" for="exampleRadios2">
             Volonter
             </label>
