--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,12 +1,4 @@
 <div class="col-lg-12">
-    <br>
-    <div class="toolbar">
-      <div class="btn-group float-right">
-        <button type="button" class="btn btn-light" onclick="this.blur();">Profil</button>
-        <button type="button" class="btn btn-light" onclick="this.blur();">Odjavi se</button>
-      </div>
-    </div>
-    <br>
     <ngb-tabset [destroyOnHide]="false" #tabs>
       <ngb-tab>
           <ng-template ngbTabTitle>
@@ -44,6 +36,15 @@
         </ng-template>
       </ngb-tab>
   
+      <ngb-tab>
+          <ng-template ngbTabTitle>
+            <span><b>Profil</b></span>
+          </ng-template>
+        <ng-template ngbTabContent>
+          <app-profile></app-profile>
+        </ng-template>
+      </ngb-tab>
+
       <ngb-tab *ngFor="let tab of closableTabs" [attr.id]="tab.id">
         <ng-template ngbTabTitle>
           <span><b>{{tab.name}}</b></span>&nbsp;&nbsp;
